test/errors/stmt_def_dunder_debug.py
def __debug__():
    pass
